--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -33,7 +33,7 @@
           label: 'Male',
           data: data.ys,
           fill: false,
-          backgroundColor: '#23417D',
+          backgroundColor: '#419B58',
           borderColor: '#E6E6E6',
           borderWidth: 1,
           lineTension: 4,
@@ -44,7 +44,7 @@
           label: 'Female',
           data: data.ys2,
           fill: false,
-          backgroundColor: '#A83226',
+          backgroundColor: '#8DDDE0',
           borderColor: '#E6E6E6',
           borderWidth: 1,
           lineTension: 4,
