check where it broke

--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -17,7 +17,7 @@
   //CHART JS
   Chart.defaults.global.responsive = true,
   Chart.defaults.global.legend.display = true,
-  Chart.defaults.global.defaultFontColor = "#444444";
+  <!-- Chart.defaults.global.defaultFontColor = "#444444"; -->
   //  Chart.defaults.global.defaultFontFamily = 'open sans'
 
 
