--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -80,7 +80,8 @@
           }],
           xAxes: [{
             ticks: {
-              fontSize: 10;
+              fontColor :"#444444",
+                  fontSize: 10,
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
