--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -81,12 +81,12 @@
           xAxes: [{
             ticks: {
               fontColor :"#444444",
+              fontStyle: 'strong',
                   //fontSize: 10,
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
               min: .50
-              fontStyle: 'strong'
             },
             gridLines: {
               display: true
