--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -16,8 +16,8 @@
   <script>
   //CHART JS
   Chart.defaults.global.responsive = true,
-  Chart.defaults.global.legend.display = true
-  // Chart.defaults.global.defaultFontColor = "#444444";
+  Chart.defaults.global.legend.display = true,
+  Chart.defaults.global.Color = "#444444"
   //  Chart.defaults.global.defaultFontFamily = 'open sans'
 
 
