label edit, csv didnt work

--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -64,6 +64,7 @@
         },
         scales: {
           yAxes: [{
+            labels:['White', ['Hispanic or','Latino'], 'Asian', ['Black or','African American'], 'Other', 'Unknown'],
             ticks: {
               fontColor :"#444444",
               fontStyle: 'strong',
