--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -64,13 +64,13 @@
         },
         scales: {
           yAxes: [{
-            labels:['White', ['Hispanic or','Latino'], 'Asian', ['Black or','African American'], 'Other', 'Unknown'],
+            labels:["White", ['Hispanic or','Latino'], "Asian", ['Black or','African American'], "Other", "Unknown"],
             ticks: {
               fontColor :"#444444",
               fontStyle: 'strong',
               fontSize: '10',
               callback: function(value, index, values) {
-                return value.toLocaleString('en-US');
+                return value.toLocaleString('en-US')=> [val.slice(x,y), val.slice(y)], ;
               },
               //beginAtZero: false,
               min: .50
