--- a/templates/bargrouped43/index.html
+++ b/templates/bargrouped43/index.html
@@ -69,8 +69,8 @@
               fontColor :"#444444",
               fontStyle: 'strong',
               fontSize: '10',
-              callback: function(value, index, values) {
-                return value.toLocaleString('en-US')=> [val.slice(x,y), val.slice(y)], ;
+              // callback: function(value, index, values) {
+              //  return value.toLocaleString('en-US');
               },
               //beginAtZero: false,
               min: .50
