--- a/templates/bargrouped39/index.html
+++ b/templates/bargrouped39/index.html
@@ -68,7 +68,7 @@
           label: 'Asian',
           data: data.ys4,
           fill: false,
-          backgroundColor: '#66443D',
+          backgroundColor: '#419b58',
           borderColor: '#E6E6E6',
           borderWidth: 1,
           lineTension: 4,
@@ -89,7 +89,7 @@
           label: 'Unknown',
           data: data.ys6,
           fill: false,
-          backgroundColor: '#6C6347',
+          backgroundColor: '#6DD3D7',
           borderColor: '#E6E6E6',
           borderWidth: 1,
           lineTension: 4,
