--- a/templates/bargrouped44/index.html
+++ b/templates/bargrouped44/index.html
@@ -33,7 +33,7 @@
           label: 'Male',
           data: data.ys2,
           fill: false,
-          backgroundColor: '#23417D',
+          backgroundColor: '#419b58',
           borderColor: '#E6E6E6',
           borderWidth: 1,
           lineTension: 4,
@@ -44,7 +44,7 @@
           label: 'Female',
           data: data.ys,
           fill: false,
-          backgroundColor: '#A83226',
+          backgroundColor: '#6DD3D7',
           borderColor: '#E6E6E6',
           borderWidth: 1,
           lineTension: 4,
@@ -62,6 +62,9 @@
         scales: {
           yAxes: [{
             ticks: {
+              fontColor :"#444444",
+              fontStyle: 'strong',
+              fontSize: '10',
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US');
               },
@@ -77,6 +80,9 @@
           }],
           xAxes: [{
             ticks: {
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
