--- a/templates/stackedbar27/index.html
+++ b/templates/stackedbar27/index.html
@@ -33,7 +33,7 @@
             label: 'Female',
             data: data.ys,
             fill: false,
-            backgroundColor: '#A83226',
+            backgroundColor: '#6DD3D7',
             //borderColor: '#803181',
             borderWidth: 1,
             lineTension: 4,
@@ -44,7 +44,7 @@
             label: 'Male',
             data: data.y2,
             fill: false,
-            backgroundColor: '#23417D',
+            backgroundColor: '#419b58',
             //  borderColor: '#434343',
             borderWidth: 1,
             lineTension: 4,
@@ -64,6 +64,9 @@
           yAxes: [{
             stacked: true,
             ticks: {
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
@@ -80,6 +83,9 @@
           xAxes: [{
             stacked: true,
             ticks:{
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
                 display: false,
               callback: function(value, index, values) {
                 return value;
