font text edits

--- a/templates/stackedbar27/index.html
+++ b/templates/stackedbar27/index.html
@@ -37,6 +37,9 @@
             //borderColor: '#803181',
             borderWidth: 1,
             lineTension: 4,
+            fontColor :"#444444",
+            fontStyle: 'strong',
+            fontSize: '10',
             hoverBackgroundColor: '#f5f5f5',
             barPercentage: .8
           },
@@ -44,6 +47,9 @@
             label: 'Male',
             data: data.y2,
             fill: false,
+            fontColor :"#444444",
+            fontStyle: 'strong',
+            fontSize: '10',
             backgroundColor: '#419b58',
             //  borderColor: '#434343',
             borderWidth: 1,
@@ -58,7 +64,12 @@
         title: {
           display: false,
           text: 'DSNY Job Titles by Median Salary',
-          position: 'bottom'
+          position: 'bottom',
+          fontColor :"#444444",
+          fontStyle: 'strong',
+          fontSize: '10'
+
+
         },
         scales: {
           yAxes: [{
