--- a/templates/bar52/index.html
+++ b/templates/bar52/index.html
@@ -36,7 +36,10 @@
           label: 'Median Pay Difference for Males and Females',
           data: data.ys,
           fill: false,
-          backgroundColor: '#2F56A6',
+          fontColor :"#444444",
+          fontStyle: 'strong',
+          fontSize: '10',
+          backgroundColor: '#73C96A',
           borderColor: '#CACACA',
           borderWidth: 1,
           lineTension: 4,
@@ -55,6 +58,9 @@
         scales: {
           xAxes: [{
             ticks: {
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
@@ -71,6 +77,9 @@
           }],
           yAxes: [{
             ticks: {
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US')+'%';
               },
