--- a/templates/stackedbar25/index.html
+++ b/templates/stackedbar25/index.html
@@ -31,9 +31,12 @@
         datasets: [
           {
             label: 'Female',
+            fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
             data: data.ys,
             fill: false,
-            backgroundColor: '#A83226',
+            backgroundColor: '#6DD3D7',
             //borderColor: '#803181',
             borderWidth: 1,
             lineTension: 4,
@@ -41,10 +44,13 @@
             barPercentage: .8
           },
           {
-            label: 'Male',
+            label: 'Male',             
+            fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
             data: data.y2,
             fill: false,
-            backgroundColor: '#23417D',
+            backgroundColor: ' #419b58',
             //  borderColor: '#434343',
             borderWidth: 1,
             lineTension: 4,
@@ -64,6 +70,9 @@
           yAxes: [{
             stacked: true,
             ticks: {
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
@@ -80,6 +89,9 @@
           xAxes: [{
             stacked: true,
             ticks:{
+              fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
                 display: false,
               callback: function(value, index, values) {
                 return value;
