--- a/templates/stackedbar28/index.html
+++ b/templates/stackedbar28/index.html
@@ -31,9 +31,11 @@
         datasets: [
           {
             label: 'Female',
+            fontColor :"#444444",
+             fontStyle: 'strong',
             data: data.ys,
             fill: false,
-            backgroundColor: '#A83226',
+            backgroundColor: '#6DD3D7',
             //borderColor: '#803181',
             borderWidth: 1,
             lineTension: 4,
@@ -42,9 +44,11 @@
           },
           {
             label: 'Male',
+            fontColor :"#444444",
+             fontStyle: 'strong',
             data: data.y2,
             fill: false,
-            backgroundColor: '#23417D',
+            backgroundColor: '#419b58',
             //  borderColor: '#434343',
             borderWidth: 1,
             lineTension: 4,
@@ -64,6 +68,8 @@
           yAxes: [{
             stacked: true,
             ticks: {
+              fontColor :"#444444",
+             fontStyle: 'strong',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
@@ -74,12 +80,18 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Median Salary'
+              labelString: 'Median Salary',
+              fontColor :"#444444",
+             fontStyle: 'strong'
+
+
             }
           }],
           xAxes: [{
             stacked: true,
             ticks:{
+              fontColor :"#444444",
+             fontStyle: 'strong',
                 display: false,
               callback: function(value, index, values) {
                 return value;
@@ -95,7 +107,9 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'FDNY Job Titles by Median Salary'
+              labelString: 'FDNY Job Titles by Median Salary',
+              fontColor :"#444444",
+             fontStyle: 'strong'
             }
           }]
         },
