--- a/templates/bar53/index.html
+++ b/templates/bar53/index.html
@@ -15,9 +15,9 @@
   <canvas id ="chart" width="800" height="400"></canvas>
   <script>
   //CHART JS
-  Chart.defaults.global.legend.display = false,
-  //Chart.defaults.global.defaultFontFamily = 'open sans'
-  //Chart.defaults.global.defaultFontColor = "#ffffff"
+  Chart.defaults.global.responsive = true,
+  Chart.defaults.global.legend.display = true,
+  Chart.defaults.global.Color = "#444444"
 
   chartIt();
 
@@ -32,7 +32,7 @@
           label: 'Number of Employees by Tenure Group',
           data: data.ys,
           fill: false,
-          backgroundColor: '#2F56A6',
+          backgroundColor: '#419B58',
           borderColor: '#CACACA',
           borderWidth: 1,
           lineTension: 4,
@@ -51,6 +51,9 @@
         scales: {
           xAxes: [{
             ticks: {
+              fontColor :"#444444",
+              fontStyle: 'strong',
+              fontSize: '10',
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US');
               },
@@ -67,6 +70,9 @@
           }],
           yAxes: [{
             ticks: {
+              fontColor :"#444444",
+              fontStyle: 'strong',
+              fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
               },
