--- a/templates/bar53/index.html
+++ b/templates/bar53/index.html
@@ -30,9 +30,12 @@
         labels: data.xs,
         datasets: [{
           label: 'Number of Employees by Tenure Group',
+          fontColor :"#444444",
+             fontStyle: 'strong',
+             fontSize: '10',
           data: data.ys,
           fill: false,
-          backgroundColor: '#419B58',
+          backgroundColor: '#73C96A',
           borderColor: '#CACACA',
           borderWidth: 1,
           lineTension: 4,
