--- a/templates/bar53/index.html
+++ b/templates/bar53/index.html
@@ -15,9 +15,7 @@
   <canvas id ="chart" width="800" height="400"></canvas>
   <script>
   //CHART JS
-  Chart.defaults.global.responsive = true,
-  Chart.defaults.global.legend.display = true,
-  Chart.defaults.global.Color = "#444444"
+  Chart.defaults.global.legend.display = false,
 
   chartIt();
 
