Removed Bold from axes

--- a/templates/bar54/index.html
+++ b/templates/bar54/index.html
@@ -55,7 +55,7 @@
           xAxes: [{
             ticks: {
               fontColor :"#444444",
-             fontStyle: 'strong',
+             //fontStyle: 'strong',
              fontSize: '10',
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US');
@@ -74,7 +74,7 @@
           yAxes: [{
             ticks: {
               fontColor :"#444444",
-             fontStyle: 'strong',
+             //fontStyle: 'strong',
              fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
