--- a/templates/bar55/index.html
+++ b/templates/bar55/index.html
@@ -53,7 +53,7 @@
           xAxes: [{
             ticks: {
               fontColor :"#444444",
-              fontStyle: 'strong',
+              //fontStyle: 'strong',
               fontSize: '10',
 
               callback: function(value, index, values) {
@@ -73,7 +73,7 @@
           yAxes: [{
             ticks: {
               fontColor :"#444444",
-              fontStyle: 'strong',
+              //fontStyle: 'strong',
               fontSize: '10',
 
               callback: function(value, index, values) {
