--- a/templates/bar53/index.html
+++ b/templates/bar53/index.html
@@ -53,7 +53,7 @@
           xAxes: [{
             ticks: {
               fontColor :"#444444",
-              fontStyle: 'strong',
+              //fontStyle: 'strong',
               fontSize: '10',
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US');
@@ -72,7 +72,7 @@
           yAxes: [{
             ticks: {
               fontColor :"#444444",
-              fontStyle: 'strong',
+              //fontStyle: 'strong',
               fontSize: '10',
               callback: function(value, index, values) {
                 return '$'+value.toLocaleString('en-US');
