--- a/templates/bargrouped39/index.html
+++ b/templates/bargrouped39/index.html
@@ -123,8 +123,8 @@
               display: true
             },
             scaleLabel: {
-              display: false,
-              labelString: 'Employees'
+              display: true,
+              labelString: 'Percent'
             }
           }],
           xAxes: [{
