--- a/templates/line23/index.html
+++ b/templates/line23/index.html
@@ -59,7 +59,7 @@
         cornerRadius: 20,
         title:{
         display: false,
-        text: 'NYCHA Vacancies Dec 2021-Dec 2022'
+        text: 'NYCHA Vacancies'
       },
         scales: {
           yAxes: [{
@@ -83,7 +83,7 @@
           xAxes: [{
             scaleLabel:{
               display: false,
-              labelString: 'Monthly Residential Marshall Evictions in NYC (Jan 2019 - March 2020)'
+              labelString: 'Dec 2021 - Dec 2022'
             },
             ticks: {
               callback: function(value, index, values) {
