--- a/templates/linechartmulti40/index.html
+++ b/templates/linechartmulti40/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Turn Around Days to Re-Occupy Vacant NYCHA Apartments</title>
+  <title>NYCHA: Vacancy Rate by Borough</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -133,7 +133,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'Turn Around Days to Re-Occupy Vacant NYCHA Apartments'
+        text: 'NYCHA: Vacancy Rate by Borough'
       },
       scales: {
         yAxes: [{
@@ -198,7 +198,7 @@ async function getData() {
   const ys5 = [];
   const ys6 = [];
 
-  const response = await fetch('NYCHA_Vacancies_1-19-2023_turnaround_days.csv');
+  const response = await fetch('NYCHA_Vacancies_1-19-2023_vacancy_rate_boro.csv');
   const data = await response.text();
 
   const table = data.split('\n').slice(1);
